Incorporating Jeff's off-canvas changes from other branch

--- a/less/off-canvas.less
+++ b/less/off-canvas.less
@@ -111,7 +111,8 @@
     }
 
     .global-nav .active-menu {
-      left: 0;;
+      left: 0;
+      z-index: 1;
     }
 
     .page {
@@ -145,6 +146,12 @@
       left: -82%;
     }
 
+    &.active-site-menu .global-nav .icon-right-open:before {
+      padding-top: 3px;
+      position: absolute;
+      right: 5%;
+    }
+
     &.active-site-menu .mobile-menu-button {
       box-shadow: inset 6px 0px 8px -2px #000;
     }
@@ -156,9 +163,29 @@
     &.active-site-menu .footer {
       left: -82%;
     }
+  }
+}
+
+@media only screen and (min-width: @medium-screen) {
+  .off-canvas {
+
+    &.active-site-menu .global-nav .icon-right-open:before {
+      position: relative;
+      right: auto;
+    }
+
+    &.active-site-menu .page {
+
+      -webkit-box-shadow: none;
+      box-shadow: none;
+
+    }
+
+    &.active-site-menu .footer {
+      left: auto;
+    }
 
   }
-
 }
 
 // 960px and up
@@ -233,6 +260,15 @@
       overflow: hidden;
       visibility: hidden;
       .transition(left 0s ease);
+    }
+
+    .global-nav ul ul li {
+      border-right: 1px solid #000;
+      border-left: 1px solid #666;
+    }
+
+    .global-nav ul ul li:first {
+      border-left: none;
     }
 
     .global-nav ul ul.active-menu {
