--- a/less/excelsior/components/_images.less
+++ b/less/excelsior/components/_images.less
@@ -45,8 +45,7 @@
       display: block;
       padding: 5px;
       background-color: transparent;
-      -webkit-transition: background-color 0.2s ease;
-              transition: background-color 0.2s ease;
+      .transition(background-color 0.2s ease);
 
       &:hover {
         background-color: rgba(217, 237, 247, 0.4);
