--- a/less/excelsior/_mixins.less
+++ b/less/excelsior/_mixins.less
@@ -50,6 +50,11 @@
       -ms-transform: translate(@x, @y);
           transform: translate(@x, @y);
 }
+.translateY(@y) {
+  -webkit-transform: translateY(@y);
+      -ms-transform: translateY(@y);
+          transform: translateY(@y);
+}
 .skew(@x, @y) {
   -webkit-transform: skew(@x, @y);
       -ms-transform: skewX(@x) skewY(@y); // See https://github.com/twitter/bootstrap/issues/4885
@@ -104,33 +109,6 @@
   background-clip: padding-box;
 }
 
-// Apply button styles to any element
-.button() {
-  display: inline-block;
-  margin-bottom: 0;
-  line-height: 20px;
-  text-align: center;
-  vertical-align: middle;
-  cursor: pointer;
-  color: #333333;
-  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
-  text-decoration: none;
-  background-color: #f5f5f5;
-  background-image: -webkit-linear-gradient(top, #ffffff, #e6e6e6);
-  background-image:         linear-gradient(to bottom, #ffffff, #e6e6e6);
-  background-repeat: repeat-x;
-  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
-  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
-  border: 1px solid #cccccc;
-  border-bottom-color: #b3b3b3;
-  border-radius: 4px;
-  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
-
-  &:hover {
-    text-decoration: none;
-  }
-}
-
 // Gradients
 #gradient {
   .horizontal(@startColor: #555, @endColor: #333) {
@@ -174,5 +152,31 @@
     background-color: @color;
     background-image: -webkit-linear-gradient(@angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent);
     background-image:         linear-gradient(@angle, rgba(255,255,255,.15) 25%, transparent 25%, transparent 50%, rgba(255,255,255,.15) 50%, rgba(255,255,255,.15) 75%, transparent 75%, transparent);
+  }
+}
+
+// Apply button styles to any element
+.button() {
+  display: inline-block;
+  margin-bottom: 0;
+  line-height: 20px;
+  text-align: center;
+  vertical-align: middle;
+  cursor: pointer;
+  color: #333333;
+  text-shadow: 0 1px 1px rgba(255, 255, 255, 0.75);
+  text-decoration: none;
+  #gradient > .vertical(#ffffff, #e6e6e6);
+  background-color: #f5f5f5;
+  background-repeat: repeat-x;
+  border-color: #e6e6e6 #e6e6e6 #bfbfbf;
+  border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
+  border: 1px solid #cccccc;
+  border-bottom-color: #b3b3b3;
+  border-radius: 4px;
+  box-shadow: inset 0 1px 0 rgba(255,255,255,.2), 0 1px 2px rgba(0,0,0,.05);
+
+  &:hover {
+    text-decoration: none;
   }
 }
