--- a/less/excelsior/components/_buttons.less
+++ b/less/excelsior/components/_buttons.less
@@ -35,8 +35,7 @@ button.button {
   color: #333333;
   text-decoration: none;
   background-position: 0 -15px;
-  -webkit-transition: background-position 0.1s linear;
-          transition: background-position 0.1s linear;
+  .transition(background-position 0.1s linear);
 }
 
 .button:focus {
@@ -98,8 +97,7 @@ button.button {
   width: 100%;
   padding-left: 0;
   padding-right: 0;
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  .box-sizing(border-box);
 }
 
 .button-block + .button-block {
@@ -124,10 +122,7 @@ input[type="button"].button-block {
 .button.success {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
-  background-color: #006dcc;
-  background-image: -webkit-linear-gradient(top, #0088cc, #0044cc);
-  background-image: linear-gradient(to bottom, #0088cc, #0044cc);
-  background-repeat: repeat-x;
+  #gradient > .vertical(#0088cc, #0044cc);
   border-color: #0044cc #0044cc #002a80;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -151,9 +146,7 @@ input[type="button"].button-block {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #faa732;
-  background-image: -webkit-linear-gradient(top, #fbb450, #f89406);
-  background-image: linear-gradient(to bottom, #fbb450, #f89406);
-  background-repeat: repeat-x;
+  #gradient > .vertical(#fbb450, #f89406);
   border-color: #f89406 #f89406 #ad6704;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -179,9 +172,7 @@ input[type="button"].button-block {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #da4f49;
-  background-image: -webkit-linear-gradient(top, #ee5f5b, #bd362f);
-  background-image:         linear-gradient(to bottom, #ee5f5b, #bd362f);
-  background-repeat: repeat-x;
+  #gradient > .vertical(#ee5f5b, #bd362f);
   border-color: #bd362f #bd362f #802420;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -207,9 +198,7 @@ input[type="button"].button-block {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
   background-color: #5bb75b;
-  background-image: -webkit-linear-gradient(top, #62c462, #51a351);
-  background-image:         linear-gradient(to bottom, #62c462, #51a351);
-  background-repeat: repeat-x;
+  #gradient > .vertical(#62c462, #51a351);
   border-color: #51a351 #51a351 #387038;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -232,10 +221,8 @@ input[type="button"].button-block {
 .button-info {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  #gradient > .vertical(#5bc0de, #2f96b4);
   background-color: #49afcd;
-  background-image: -webkit-linear-gradient(top, #5bc0de, #2f96b4);
-  background-image: linear-gradient(to bottom, #5bc0de, #2f96b4);
-  background-repeat: repeat-x;
   border-color: #2f96b4 #2f96b4 #1f6377;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
@@ -260,10 +247,8 @@ input[type="button"].button-block {
 .button-inverse {
   color: #ffffff;
   text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.25);
+  #gradient > .vertical(#444444, #222222);
   background-color: #363636;
-  background-image: -webkit-linear-gradient(top, #444444, #222222);
-  background-image:         linear-gradient(to bottom, #444444, #222222);
-  background-repeat: repeat-x;
   border-color: #222222 #222222 #000000;
   border-color: rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.1) rgba(0, 0, 0, 0.25);
 }
