--- a/less/excelsior/components/_demo-bar.less
+++ b/less/excelsior/components/_demo-bar.less
@@ -6,16 +6,16 @@
   color:#FFF;
 }
 #wrapper {
+  position: relative;
+  display: block;
+  width: 100%;
+  height: 100%;
+  margin: 0 auto;
+  background-color: #FFF;
   -webkit-transition: height 1250ms ease,width 1250ms ease,margin 1250ms ease;
           transition: height 1250ms ease,width 1250ms ease,margin 1250ms ease;
   box-shadow: 0 0 12px 1px #000;
-  -webkit-transform: translate3d(0, 0, 0);
-  position: relative;
-  background-color: #FFF;
-  width: 100%;
-  height: 100%;
-  display: block;
-  margin: 0 auto;
+  .translate3d(0, 0, 0);
 }
 
 #wrapper iframe::-webkit-scrollbar {
@@ -32,14 +32,11 @@
 }
 
 #wrapper.noTransitions {
-  -webkit-transition: 0;
-          transition: 0;
+  .transition(0);
 }
 
 #wrapper .keyboard-bg {
-  -webkit-transform: translateY(-20px);
-      -ms-transform: translateY(-20px);
-          transform: translateY(-20px);
+  .translateY(-20px);
   display: block;
   opacity: 0;
   position: absolute;
@@ -54,8 +51,7 @@
 #wrapper[data-device="smartphoneLandscape"].keyboard,
 #wrapper[data-device="tabletLandscape"].keyboard,
 #wrapper[data-device="tabletPortrait"].keyboard {
-  -moz-box-sizing: border-box;
-       box-sizing: border-box;
+  .box-sizing(border-box);
   padding-top: 20px;
 }
 
@@ -63,9 +59,7 @@
 #wrapper[data-device="smartphoneLandscape"].keyboard .keyboard-bg,
 #wrapper[data-device="tabletLandscape"].keyboard .keyboard-bg,
 #wrapper[data-device="tabletPortrait"].keyboard .keyboard-bg {
-  -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-          transform: translateY(0px);
+  .translateY(0px);
   opacity: 1;
 }
 
@@ -97,15 +91,12 @@ body>section {
 }
 
 #size {
-  -webkit-transition: padding 240ms ease;
-  transition: padding 240ms ease;
+  .transition(padding 240ms ease);
   background-image: -webkit-linear-gradient(#202021,#222223);
   background-image:         linear-gradient(#202021,#222223);
   box-shadow: 0 1px 0 #363738;
   border-radius: 4px;
-  -webkit-transform: translate3d(0, 0, 0);
-      -ms-transform: translate3d(0, 0, 0);
-          transform: translate3d(0, 0, 0);
+  .translate3d(0, 0, 0);
   color: #EEE;
   border: 1px solid #040404;
   text-align: center;
@@ -115,7 +106,7 @@ body>section {
   display: block;
   float: left;
   font-size: 14px;
-  height:32px;
+  height: 32px;
 }
 
 @media screen and (max-width: 480px) {
@@ -181,8 +172,7 @@ header .keyboard a,header .cssrefresh a {
 }
 #devices {
   border-radius: 4px;
-  -webkit-transition: all 200ms ease;
-  transition: all 200ms ease;
+  .transition(all 200ms ease);
   position: absolute;
   z-index: 1;
   top: 8px;
@@ -243,9 +233,7 @@ header .keyboard a,header .cssrefresh a {
 
   .tablet-landscape span,
   .smartphone-landscape span {
-    -webkit-transform: rotate(90deg);
-        -ms-transform: rotate(90deg);
-            transform: rotate(90deg);
+    .rotate(90deg);
   }
 
   .auto span {
@@ -266,8 +254,7 @@ header .keyboard a,header .cssrefresh a {
 @media screen and (max-width: 520px) {
   #devices {
     margin-left: -25px;
-    -webkit-transition: all 0s ease;
-            transition: all 0s ease;
+    .transition(all 0s ease);
   }
 }
 
